--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "drizzle-orm": "^0.34.1",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
+    "next-auth": "^5.0.0-beta.22",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "react": "^18",
